Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: fixit
spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: fixit
  template:
    metadata:
      labels:
        app: fixit
    spec:
      containers:
        - name: fixit
          image: fixit:v1
          ports:
            - port: 3000
              containerPort: 3000
