init-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-demo
spec:
  containers:
    - name: app
      image: nginx:1.27
      ports:
        - containerPort: 80
