init-node-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-node-app
spec:

  volumes:
    - name: node-data
      emptyDir: {}

  containers:
    - name: node-app
      image: node:22-alpine
      command:
        - sh
        - -c
        - |
          cat /shared/startup.txt
          sleep 3600

      volumeMounts:
        - name: node-data
          mountPath: /shared
