init-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-volume-demo

spec:

  volumes:
    - name: shared-data
      emptyDir: {}

  containers:
    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          cat /shared/message.txt
          sleep 3600

      volumeMounts:
        - name: shared-data
          mountPath: /shared
