restart-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: restart-demo

spec:
  restartPolicy: Always

  containers:
    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          echo "Application starting..."
          sleep 5
          echo "Application exiting..."
          exit 1
