sidecar-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-demo

spec:
  volumes:
    - name: shared-data
      emptyDir: {}

  containers:

    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          while true; do
            echo "$(date) - Application is running" >> /shared/app.log
            sleep 5
          done

      volumeMounts:
        - name: shared-data
          mountPath: /shared

    - name: sidecar
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          while true; do
            echo "----- Sidecar reading log -----"
            tail -n 5 /shared/app.log
            sleep 10
          done

      volumeMounts:
        - name: shared-data
          mountPath: /shared
