statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: fixit-stateful
spec:
  serviceName: fixit-stateful
  replicas: 2

  selector:
    matchLabels:
      app: fixit-stateful
  template:
    metadata:
      labels:
        app: fixit-stateful

    spec:
      containers:
        - name: fixit
          image: fixit:v2
          ports:
            - containerPort: 3000
          
          volumeMounts:
            - name: fixit-storage
              mountPath: /data
    
  volumeClaimTemplates:
    - metadata:
        name: fixit-storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
