Service.yml
apiVersion: v1
kind: Service
metadata: 
  name: fixit-service
spec:
  selector:
    app: fixit
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
