Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixit-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: fixit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fixit-service
                port:
                  number: 3000
