allow-fixit-to-api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fixit-api-egress
  namespace: fixit-dev
spec:
  podSelector:
    matchLabels:
      app: fixit

  policyTypes:
    - Egress
  
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: fixit-api

      ports:
        - protocol: TCP
          port: 3000
