allow-kubernetes-api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fixit-api-to-kubernetes-api
  namespace: fixit-dev
spec:
  podSelector:
    matchLabels:
      app: fixit-api
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 172.19.0.2/32
      ports:
        - protocol: TCP
          port: 6443
