default-deny-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: fixit-dev
spec:
  podSelector: {}
  policyTypes:
    - Egress
