fixit-api-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fixit-api-ingress
spec:
  podSelector:
    matchLabels:
      app: fixit-api

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: fixit

      ports:
        - protocol: TCP
          port: 3000
